spec: Change metadata from import() proposal

--- a/spec.html
+++ b/spec.html
@@ -1,14 +1,13 @@
 <pre class="metadata">
-title: import()
+title: Smart Pipelines
 status: proposal
-stage: 3
-location: https://tc39.github.io/proposal-dynamic-import/
+stage: −1
+location: https://github.com/js-choi/proposal-smart-pipelines
 copyright: false
-contributors: Domenic Denicola
+contributors: J. S. Choi
 </pre>
 <script src="ecmarkup.js" defer></script>
 <link rel="stylesheet" href="ecmarkup.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/solarized_light.min.css">
 
 <emu-intro id="introduction">
   <h1>Introduction</h1>
