--- a/spec.html
+++ b/spec.html
@@ -10,10 +10,11 @@ contributors: J. S. Choi
 <link rel="stylesheet" href="ecmarkup.css">
 
 <emu-intro id=introduction>
-  <h1>Introduction</h1>
 
   <p>Background explanatory material for this specification can be found in the <a href="https://github.com/tc39/proposal-dynamic-import">tc39/proposal-dynamic-import</a> repository. See also the <a href="https://github.com/tc39/proposal-dynamic-import/issues">issues</a> and the <a href="https://github.com/tc39/proposal-dynamic-import/blob/master/HTML%20Integration.md">HTML integration spec</a> that builds on top of the below JavaScript specification.</p>
 </emu-intro>
+
+<!--
 
 <emu-clause id=sec-modules>
   <h1>Modules</h1>
@@ -265,7 +266,8 @@ contributors: J. S. Choi
     </li>
     <li>
       <ins>|ImportCall| must not be extended.</ins>
-      <!-- This is so that in the future we can potentially add new arguments or support ArgumentList. -->
+      <!~~ This is so that in the future we can potentially add new arguments or support ArgumentList. ~~>
     </li>
   </ul>
 </emu-clause>
+ -->
