--- a/spec.html
+++ b/spec.html
@@ -11,7 +11,9 @@ contributors: J. S. Choi
 
 <emu-intro id=introduction>
 
-  <p>Background explanatory material for this specification can be found in the <a href="https://github.com/tc39/proposal-dynamic-import">tc39/proposal-dynamic-import</a> repository. See also the <a href="https://github.com/tc39/proposal-dynamic-import/issues">issues</a> and the <a href="https://github.com/tc39/proposal-dynamic-import/blob/master/HTML%20Integration.md">HTML integration spec</a> that builds on top of the below JavaScript specification.</p>
+# Introduction
+
+This repository contains a proposal for adding a "smart pipeline operator" `|>` to JavaScript. It is currently not even in Stage 0 of the [TC39 process](https://tc39.github.io/process-document/). It resulted from [previous discussions about pipeline placeholders in the previous pipe-operator proposal](https://github.com/tc39/proposal-pipeline-operator/issues?q=placeholder), which culminated in an [invitation by Daniel Ehrenberg, champion on the current pipe proposal, to try writing a text draft](https://github.com/tc39/proposal-pipeline-operator/issues/89#issuecomment-363853394) of one of the new proposed pipe variants. This variant is listed as [Proposal 4: Smart Mix on the pipe-proposal wiki](https://github.com/tc39/proposal-pipeline-operator/wiki#proposal-4-smart-mix).
 </emu-intro>
 
 <!--
