Spec: Replace intro Ecmarkdown with HTML

--- a/spec.html
+++ b/spec.html
@@ -11,9 +11,10 @@ contributors: J. S. Choi
 
 <emu-intro id=introduction>
 
-# Introduction
+<h1>Introduction</h1>
 
-This repository contains a proposal for adding a "smart pipeline operator" `|>` to JavaScript. It is currently not even in Stage 0 of the [TC39 process](https://tc39.github.io/process-document/). It resulted from [previous discussions about pipeline placeholders in the previous pipe-operator proposal](https://github.com/tc39/proposal-pipeline-operator/issues?q=placeholder), which culminated in an [invitation by Daniel Ehrenberg, champion on the current pipe proposal, to try writing a text draft](https://github.com/tc39/proposal-pipeline-operator/issues/89#issuecomment-363853394) of one of the new proposed pipe variants. This variant is listed as [Proposal 4: Smart Mix on the pipe-proposal wiki](https://github.com/tc39/proposal-pipeline-operator/wiki#proposal-4-smart-mix).
+<p>This repository contains a proposal for adding a “smart pipeline operator” <code>|&gt;</code> to JavaScript. It is currently not even in Stage 0 of the <a href="https://tc39.github.io/process-document/">TC39 process</a>. It resulted from <a href="https://github.com/tc39/proposal-pipeline-operator/issues?q=placeholder">previous discussions about pipeline placeholders in the previous pipe-operator proposal</a> in 2018-01, which culminated in an <a href="https://github.com/tc39/proposal-pipeline-operator/issues/89#issuecomment-363853394">invitation by Daniel Ehrenberg</a> in 2018-02, the champion on the current pipe proposal, to try writing a text draft of one of the new proposed pipe variants. This variant is listed as <a href="https://github.com/tc39/proposal-pipeline-operator/wiki#proposal-4-smart-mix">Proposal 4: Smart Mix on the pipe-proposal wiki</a>.</p>
+
 </emu-intro>
 
 <!--
