Spec: Remove unnecessary attribute quotes

--- a/spec.html
+++ b/spec.html
@@ -1,4 +1,4 @@
-<pre class="metadata">
+<pre class=metadata>
 title: Smart Pipelines
 status: proposal
 stage: −1
@@ -6,8 +6,8 @@ location: https://github.com/js-choi/proposal-smart-pipelines
 copyright: false
 contributors: J. S. Choi
 </pre>
-<script src="ecmarkup.js" defer></script>
-<link rel="stylesheet" href="ecmarkup.css">
+<script src=ecmarkup.js defer></script>
+<link rel=stylesheet href=ecmarkup.css>
 
 <emu-intro id=introduction>
 
@@ -135,7 +135,7 @@ contributors: J. S. Choi
 
     <emu-clause id=sec-static-semantics-static-semantics-isfunctiondefinition>
       <h1>Static Semantics: IsFunctionDefinition</h1>
-      <emu-see-also-para op="IsFunctionDefinition"></emu-see-also-para>
+      <emu-see-also-para op=IsFunctionDefinition></emu-see-also-para>
       <emu-grammar>
         MemberExpression :
           MemberExpression `[` Expression `]`
@@ -164,7 +164,7 @@ contributors: J. S. Choi
 
     <emu-clause id=sec-static-semantics-static-semantics-isdestructuring>
       <h1>Static Semantics: IsDestructuring</h1>
-      <emu-see-also-para op="IsDestructuring"></emu-see-also-para>
+      <emu-see-also-para op=IsDestructuring></emu-see-also-para>
       <emu-grammar>MemberExpression : PrimaryExpression</emu-grammar>
       <emu-alg>
         1. If |PrimaryExpression| is either an |ObjectLiteral| or an |ArrayLiteral|, return *true*.
@@ -198,7 +198,7 @@ contributors: J. S. Choi
 
     <emu-clause id=sec-static-semantics-static-semantics-isvalidsimpleassignmenttarget>
       <h1>Static Semantics: IsValidSimpleAssignmentTarget</h1>
-      <emu-see-also-para op="IsValidSimpleAssignmentTarget"></emu-see-also-para>
+      <emu-see-also-para op=IsValidSimpleAssignmentTarget></emu-see-also-para>
       <emu-grammar>
         CallExpression :
           CallExpression `[` Expression `]`
