Spec: Stubbed out lexical syntax

--- a/spec.html
+++ b/spec.html
@@ -10,18 +10,17 @@ contributors: J. S. Choi
 <link rel=stylesheet href=ecmarkup.css>
 
 <emu-intro id=introduction>
-
 <h1>Introduction</h1>
 <p>This is the formal specification for a proposed “smart pipe operator” <code>|&gt;</code> in JavaScript. <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>See the proposal’s explainer for an introduction</a>.</p>
-
 </emu-intro>
 
 <emu-clause id=syntax>
 
-<h1>Syntax</h1>
+<h1>Lexical Syntax</h1>
 
 <emu-grammar>
-Lo
+Punctuator :: one of
+  `{` `(` `)` `[` `]` `.` `...` `;` `,` `<` `>` `<=` `>=` `==` `!=` `===` `!==` `+` `-` `*` `%` `**` `++` `--` `<<` `>>` `>>>` `&` `|` `^` `!` `~` `&&` `||` `?` `:` <ins>`#`</ins> `=` `+=` `-=` `*=` `%=` `**=` `<<=` `>>=` `>>>=` `&=` `|=` `^=` `=>`
 </emu-grammar>
 
 </emu-clause>
