Readme: Started notes on formal pipeline syntax

--- a/spec.html
+++ b/spec.html
@@ -28,8 +28,8 @@ Punctuator :: one of
 <emu-clause id=pipeline-operator-syntax>
 <h1>Syntax</h1>
 <emu-grammar>
-PipeExpression :
-  PipeExpression[?In, ?Yield, ?Await] `|>` ConditionalExpression[?In, ?Yield, ?Await]
+PipelineExpression :
+  PipelineExpression[?In, ?Yield, ?Await] `|>` ConditionalExpression[?In, ?Yield, ?Await]
 </emu-grammar>
 </emu-clause>
 
