--- a/spec.html
+++ b/spec.html
@@ -14,289 +14,177 @@ contributors: J. S. Choi
 <p>This is the formal specification for a proposed “smart pipe operator” <code>|&gt;</code> in JavaScript. <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>See the proposal’s explainer for an introduction</a>.</p>
 </emu-intro>
 
-<emu-clause id=punctuators>
+[TODO: Environments]
+
+<emu-clause id=sec-punctuators>
 <h1>Punctuators</h1>
+
+<ins class=block>
 <emu-grammar>
 Punctuator :: one of
   `{` `(` `)` `[` `]` `.` `...` `;` `,` `<` `>` `<=` `>=` `==` `!=` `===` `!==` `+` `-` `*` `%` `**` `++` `--` `<<` `>>` `>>>` `&` `|` `^` `!` `~` `&&` `||` `?` `:` <ins>`|>` `#`</ins> `=` `+=` `-=` `*=` `%=` `**=` `<<=` `>>=` `>>>=` `&=` `|=` `^=` `=>`
 </emu-grammar>
-</emu-clause>
+</ins>
 
-<emu-clause id=pipeline-operator>
-<h1>Pipeline Operator</h1>
-
-<emu-clause id=pipeline-operator-syntax>
-<h1>Syntax</h1>
+<del class=block>
 <emu-grammar>
-PipelineExpression :
-  PipelineExpression[?In, ?Yield, ?Await] `|>` ConditionalExpression[?In, ?Yield, ?Await]
+Punctuator :: one of
+  `{` `(` `)` `[` `]` `.` `...` `;` `,` `<` `>` `<=` `>=` `==` `!=` `===` `!==` `+` `-` `*` `%` `**` `++` `--` `<<` `>>` `>>>` `&` `|` `^` `!` `~` `&&` `||` `?` `:` `=` `+=` `-=` `*=` `%=` `**=` `<<=` `>>=` `>>>=` `&=` `|=` `^=` `=>`
 </emu-grammar>
+</del>
+
 </emu-clause>
 
-<emu-clause id=pipeline-operator-static-semantics-isfunctiondefinition>
-<h1>Static Semantics: IsFunctionDefinition</h1>
-<emu-grammar>PipeExpression : PipeExpression `|>` ConditionalExpression</emu-grammar>
+<emu-clause id=sec-primary-expression>
+<h1>Primary Expression</h1>
+<h2>Syntax</h2>
+
+<emu-grammar>
+PrimaryExpression[Yield, Await] :
+  `this`
+  <ins>`#`</ins>
+  IdentifierReference[?Yield, ?Await]
+  Literal
+  ArrayLiteral[?Yield, ?Await]
+  ObjectLiteral[?Yield, ?Await]
+  FunctionExpression
+  ClassExpression[?Yield, ?Await]
+  GeneratorExpression
+  AsyncFunctionExpression
+  AsyncGeneratorExpression
+  RegularExpressionLiteral
+  TemplateLiteral[?Yield, ?Await, ~Tagged]
+  CoverParenthesizedExpressionAndArrowParameterList[?Yield, ?Await]
+</emu-grammar>
+
+</emu-clause>
+
+<emu-clause id=sec-assignment-operators>
+<h1>Assignment Operators</h1>
+<h2>Syntax</h2>
+
+<emu-grammar>
+AssignmentExpression[In, Yield, Await] :
+  <del>ConditionalExpression[?In, ?Yield, ?Await]</del>
+  <ins>PipelineExpression[?In, ?Yield, ?Await]</ins>
+  [+Yield] YieldExpression[?In, ?Await]
+  ArrowFunction[?In, ?Yield, ?Await]
+  AsyncArrowFunction[?In, ?Yield, ?Await]
+  LeftHandSideExpression[?Yield, ?Await] `=` AssignmentExpression[?In, ?Yield, ?Await]
+  LeftHandSideExpression[?Yield, ?Await] AssignmentOperator AssignmentExpression[?In, ?Yield, ?Await]
+</emu-grammar>
+
+</emu-clause>
+
+<ins class=block>
+<emu-clause id=sec-pipeline-operator>
+<h1>Pipeline Operator</h1>
+<h2>Syntax</h2>
+
+<emu-grammar>
+PipelineExpression[In, Yield, Await] :
+  ConditionalExpression[?In, ?Yield, ?Await]
+  PipelineExpression[?In, ?Yield, ?Await] `|>` PipelineBody[?In, ?Yield, ?Await]
+
+PipelineBody[In, Yield, Await] :
+  PipelineBareFunctionCall
+  PipelineBareConstructorCall
+  PipelineTopicBody[?In, ?Yield, ?Await]
+
+PipelineBareFunctionCall :
+  SimpleReference
+
+PipelineBareConstructorCall :
+  `new` SimpleReference
+
+SimpleReference :
+  IdentifierReference
+  SimpleReference `.` IdentifierName
+
+PipelineTopicBody[In, Yield, Await] :
+  ConditionalExpression[?In, ?Yield, ?Await]
+</emu-grammar>
+
+<emu-clause id=sec-pipeline-operator-static-semantics-contains>
+<h1>Static Semantics: Contains</h1>
+With parameter _symbol_.
+
+<emu-grammar>PipelineBareFunctionCall : SimpleReference</emu-grammar>
 <emu-alg>
-1. Return IsFunctionDefinition of _ConditionalExpression_.
+1. If symbol is `#`, return *false*.
+2. For each child node _child_ of this Parse Node, do
+  1. If _child_ is an instance of _symbol_, return *true*.
+  2. If _child_ is an instance of a nonterminal, then
+    1. Let _contained_ be the result of _child_ Contains _symbol_.
+    2. If _contained_ is *true*, return *true*.
+2. Return *false*.
+</emu-alg>
+</emu-clause>
+
+<emu-clause id=sec-pipeline-operator-static-semantics-early-errors>
+<h1>Static Semantics: Early Errors</h1>
+
+<emu-grammar>PipelineTopicBody : ConditionalExpression</emu-grammar>
+<emu-alg>
+* It is a Syntax Error if _ConditionalExpression_ Contains `#` is *false*.
+* It is a Syntax Error if _ConditionalExpression_ is covering a _YieldExpression_.
+</emu-alg>
+</emu-clause>
+
+<emu-clause id=sec-pipeline-operator-runtime-semantics-evaluation>
+<h1>Runtime Semantics: Evaluation</h1>
+
+<emu-grammar>PipelineExpression : PipelineExpression</emu-grammar>
+<emu-alg>
+1. Let _envRec_ be _env_'s Environment Record.
+2. Assert: _envRec_ is a declarative Environment Record.
+3. Assert: _envRec_.GetTopicBindingStatus() is *"void"*.
+4. Assert: _envRec_.GetTopic() is *undefined*.
+5. Perform ! _envRec_.BindTopicValue(_topic_).
+</emu-alg>
+</emu-clause>
+
+<emu-clause id=sec-pipeline-operator-runtime-semantics-pipelinebodyevaluation>
+<h1>Runtime Semantics: PipelineBodyEvaluation</h1>
+With parameter _headValue_.
+
+<emu-grammar>PipelineBareFunctionCall : SimpleReference</emu-grammar>
+<emu-alg>
+1. Let_ref_ be the result of evaluating _SimpleReference_.
+2. Let_func_ be ? GetValue(_ref_).
+3. Let_thisCall_ be this |PipelineBareFunctionCall|.
+4. Let_tailCall_ be IsInTailPosition(_thisCall_).
+5. Let_Arguments_ be a List containing the one element which is _headValue_.
+6. Return ? EvaluateCall(_func_, _ref_, _Arguments_, _tailCall_).
+</emu-alg>
+
+[TODO: More body evaluations]
+
+</emu-clause>
+
+[TODO: Other static semantics]
+
+</emu-clause>
+</ins>
+
+<emu-clause id=sec-arrow-function-definitions>
+<h1>Arrow Function Definitions</h1>
+
+<emu-clause id=sec-arrow-function-definitions-static-semantics-contains>
+<h1>Static Semantics: Contains</h1>
+
+<emu-grammar>ArrowFunction : ArrowParameters `=>` ConciseBody</emu-grammar>
+<emu-alg>
+1. If _symbol_ is not one of |NewTarget|, |SuperProperty|, |SuperCall|, <del>`super` or `this`</del> <ins>`super`, `this`, or `#`</ins>, return *false*.
+2. If _ArrowParameters_ Contains _symbol_ is *true*, return *true*.
+3. Return |ConciseBody| Contains _symbol_.
+
+<emu-note>
+Normally, Contains does not look inside most function forms. However, Contains is used to detect `new.target`, <ins>`this`, `super`, and `#`</ins> usage within an ArrowFunction.
+</emu-note>
+
 </emu-alg>
 </emu-clause>
 
 </emu-clause>
 
-<!--
-
-<emu-clause id=sec-modules>
-  <h1>Modules</h1>
-
-  <emu-clause id=sec-module-semantics>
-    <h1>Module Semantics</h1>
-
-    <emu-clause id=sec-hostresolveimportedmodule aoid=HostResolveImportedModule>
-      <h1>Runtime Semantics: HostResolveImportedModule ( <del>_referencingModule_</del><ins>_referencingScriptOrModule_</ins>, _specifier_ )</h1>
-
-      <p>HostResolveImportedModule is an implementation defined abstract operation that provides the concrete Module Record subclass instance that corresponds to the |ModuleSpecifier| String, _specifier_, occurring within the context of the <ins>script or </ins>module represented by the <ins>Script Record or </ins>Module Record <del>_referencingModule_</del><ins>_referencingScriptOrModule_</ins>.</p>
-      <p>The implementation of HostResolveImportedModule must conform to the following requirements:</p>
-
-      <ul>
-        <li>
-          The normal return value must be an instance of a concrete subclass of Module Record.
-        </li>
-        <li>
-          If a Module Record corresponding to the pair <del>_referencingModule_</del><ins>_referencingScriptOrModule_</ins>, _specifier_ does not exist or cannot be created, an exception must be thrown.
-        </li>
-        <li>
-          This operation must be idempotent if it completes normally. Each time it is called with a specific <del>_referencingModule_</del><ins>_referencingScriptOrModule_</ins>, _specifier_ pair as arguments it must return the same Module Record instance.
-        </li>
-      </ul>
-
-      <p>Multiple different <del>_referencingModule_</del><ins>_referencingScriptOrModule_</ins>, _specifier_ pairs may map to the same Module Record instance. The actual mapping semantic is implementation defined but typically a normalization process is applied to _specifier_ as part of the mapping process. A typical normalization process would include actions such as alphabetic case folding and expansion of relative and abbreviated path specifiers.</p>
-    </emu-clause>
-
-    <emu-clause id=sec-hostimportmoduledynamically aoid=HostImportModuleDynamically>
-      <h1><ins>Runtime Semantics: HostImportModuleDynamically ( _referencingScriptOrModule_, _specifier_, _promiseCapability_ )</ins></h1>
-
-      <p>HostImportModuleDynamically is an implementation defined abstract operation that performs any necessary setup work in order to make available the module corresponding to the |ModuleSpecifier| String, _specifier_, occurring within the context of the script or module represented by the Script Record or Module Record _referencingScriptOrModule_. It then performs FinishDynamicImport to finish the dynamic import process.</p>
-
-      <p>The implementation of HostImportModuleDynamically must conform to the following requirements:</p>
-
-      <ul>
-        <li>
-          The abstract operation must always complete normally with *undefined*. Success or failure must instead be signaled as discussed below.
-        </li>
-        <li>
-          The host environment must conform to one of the two following sets of requirements:
-          <dl>
-            <dt>Success path</dt>
-
-            <dd>
-              <ul>
-                <li>At some future time, the host environment must perform FinishDynamicImport(_referencingScriptOrModule_, _specifier_, _promiseCapability_, NormalCompletion(*undefined*)).</li>
-
-                <li>Any subsequent call to HostResolveImportedModule after FinishDynamicImport has completed, given the arguments _referencingScriptOrModule_ and _specifier_, must complete normally.</li>
-
-                <li>The completion value of any subsequent call to HostResolveImportedModule after FinishDynamicImport has completed, given the arguments _referencingScriptOrModule_ and _specifier_, must be a module which has already been evaluated, i.e. whose ModuleEvaluation concrete method has already been called and returned a normal completion.</li>
-              </ul>
-            </dd>
-
-            <dt>Failure path</dt>
-
-            <dd>
-              <ul>
-                <li>At some future time, the host environment must perform FinishDynamicImport(_referencingScriptOrModule_, _specifier_, _promiseCapability_, an abrupt completion), with the abrupt completion representing the cause of failure.</li>
-              </ul>
-            </dd>
-          </dl>
-
-          <p>The intent of this specification is to not violate run to completion semantics. The spec-level formalization of this is a work-in-progress.</p>
-        </li>
-        <li>
-          Every call to HostImportModuleDynamically with the same _referencingScriptOrModule_ and _specifier_ arguments must conform to the <em>same</em> set of requirements above as previous calls do. That is, if the host environment takes the success path once for a given _referencingScriptOrModule_, _specifier_ pair, it must always do so, and the same for the failure path.
-        </li>
-        <li>
-          The operation must not call _promiseCapability_.[[Resolve]] or _promiseCapability_.[[Reject]], but instead must treat _promiseCapability_ as an opaque identifying value to be passed through to FinishDynamicImport.
-        </li>
-      </ul>
-
-      <p>The actual process performed is implementation defined, but typically consists of performing whatever I/O operations are necessary to allow HostResolveImportedModule to synchronously retrieve the appropriate Module Record, and then calling its ModuleEvaluation concrete method. This might require performing similar normalization as HostResolveImportedModule does.</p>
-    </emu-clause>
-
-    <emu-clause id=sec-finishdynamicimport aoid=FinishDynamicImport>
-      <h1><ins>Runtime Semantics: FinishDynamicImport ( _referencingScriptOrModule_, _specifier_, _promiseCapability_, _completion_ )</ins></h1>
-
-      <p>FinishDynamicImport completes the process of a dynamic import originally started by an `import()` call, resolving or rejecting the promise returned by that call as appropriate according to _completion_. It is performed by host environments as part of HostImportModuleDynamically.</p>
-
-      <emu-alg>
-        1. If _completion_ is an abrupt completion, then perform ! Call(_promiseCapability_.[[Reject]], *undefined*, « _completion_.[[Value]] »).
-        1. Otherwise,
-          1. Assert: _completion_ is a normal completion and _completion_.[[Value]] is *undefined*.
-          1. Let _moduleRecord_ be ! HostResolveImportedModule(_referencingScriptOrModule_, _specifierString_).
-          1. Assert: ModuleEvaluation has already been invoked on _moduleRecord_ and successfully completed.
-          1. Let _namespace_ be GetModuleNamespace(_moduleRecord_).
-          1. If _namespace_ is an abrupt completion, perform ! Call(_promiseCapability_.[[Reject]], *undefined*, « _namespace_.[[Value]] »).
-          1. Otherwise, perform ! Call(_promiseCapability_.[[Resolve]], *undefined*, « _namespace_.[[Value]] »).
-      </emu-alg>
-    </emu-clause>
-  </emu-clause>
-</emu-clause>
-
-<emu-clause id=sec-left-hand-side-expressions>
-  <h1>Left-Hand-Side Expressions</h1>
-  <h2>Syntax</h2>
-  <emu-grammar>
-    CallExpression[Yield] :
-      MemberExpression[?Yield] Arguments[?Yield]
-      SuperCall[?Yield]
-      <ins>ImportCall[?Yield]</ins>
-      CallExpression[?Yield] Arguments[?Yield]
-      CallExpression[?Yield] `[` Expression[+In, ?Yield] `]`
-      CallExpression[?Yield] `.` IdentifierName
-      CallExpression[?Yield] TemplateLiteral[?Yield]
-
-    <ins>ImportCall[Yield] :
-      `import` `(` AssignmentExpression[+In, ?Yield] `)`</ins>
-  </emu-grammar>
-
-  <emu-clause id=sec-static-semantics>
-    <h1>Static Semantics</h1>
-
-    <emu-clause id=sec-static-semantics-static-semantics-isfunctiondefinition>
-      <h1>Static Semantics: IsFunctionDefinition</h1>
-      <emu-see-also-para op=IsFunctionDefinition></emu-see-also-para>
-      <emu-grammar>
-        MemberExpression :
-          MemberExpression `[` Expression `]`
-          MemberExpression `.` IdentifierName
-          MemberExpression TemplateLiteral
-          SuperProperty
-          MetaProperty
-          `new` MemberExpression Arguments
-
-        NewExpression :
-          `new` NewExpression
-
-        CallExpression :
-          MemberExpression Arguments
-          SuperCall
-          <ins>ImportCall</ins>
-          CallExpression Arguments
-          CallExpression `[` Expression `]`
-          CallExpression `.` IdentifierName
-          CallExpression TemplateLiteral
-      </emu-grammar>
-      <emu-alg>
-        1. Return *false*.
-      </emu-alg>
-    </emu-clause>
-
-    <emu-clause id=sec-static-semantics-static-semantics-isdestructuring>
-      <h1>Static Semantics: IsDestructuring</h1>
-      <emu-see-also-para op=IsDestructuring></emu-see-also-para>
-      <emu-grammar>MemberExpression : PrimaryExpression</emu-grammar>
-      <emu-alg>
-        1. If |PrimaryExpression| is either an |ObjectLiteral| or an |ArrayLiteral|, return *true*.
-        1. Return *false*.
-      </emu-alg>
-      <emu-grammar>
-        MemberExpression :
-          MemberExpression `[` Expression `]`
-          MemberExpression `.` IdentifierName
-          MemberExpression TemplateLiteral
-          SuperProperty
-          MetaProperty
-          `new` MemberExpression Arguments
-
-        NewExpression :
-          `new` NewExpression
-
-        CallExpression :
-          MemberExpression Arguments
-          SuperCall
-          <ins>ImportCall</ins>
-          CallExpression Arguments
-          CallExpression `[` Expression `]`
-          CallExpression `.` IdentifierName
-          CallExpression TemplateLiteral
-      </emu-grammar>
-      <emu-alg>
-        1. Return *false*.
-      </emu-alg>
-    </emu-clause>
-
-    <emu-clause id=sec-static-semantics-static-semantics-isvalidsimpleassignmenttarget>
-      <h1>Static Semantics: IsValidSimpleAssignmentTarget</h1>
-      <emu-see-also-para op=IsValidSimpleAssignmentTarget></emu-see-also-para>
-      <emu-grammar>
-        CallExpression :
-          CallExpression `[` Expression `]`
-          CallExpression `.` IdentifierName
-
-        MemberExpression :
-          MemberExpression `[` Expression `]`
-          MemberExpression `.` IdentifierName
-          SuperProperty
-      </emu-grammar>
-      <emu-alg>
-        1. Return *true*.
-      </emu-alg>
-      <emu-grammar>
-        CallExpression :
-          MemberExpression Arguments
-          SuperCall
-          <ins>ImportCall</ins>
-          CallExpression Arguments
-          CallExpression TemplateLiteral
-
-        NewExpression :
-          `new` NewExpression
-
-        MemberExpression :
-          MemberExpression TemplateLiteral
-          `new` MemberExpression Arguments
-
-        NewTarget :
-          `new` `.` `target`
-      </emu-grammar>
-      <emu-alg>
-        1. Return *false*.
-      </emu-alg>
-    </emu-clause>
-  </emu-clause>
-
-  <emu-clause id=sec-import-calls>
-    <h1><ins>Import Calls</ins></h1>
-
-    <emu-clause id=sec-import-call-runtime-semantics-evaluation>
-      <h1>Runtime Semantics: Evaluation</h1>
-
-      <emu-grammar>ImportCall : `import` `(` AssignmentExpression `)`</emu-grammar>
-      <emu-alg>
-        1. Let _referencingScriptOrModule_ be ! GetActiveScriptOrModule().
-        1. Assert: _referencingScriptOrModule_ is a Script Record or Module Record (i.e. is not *null*).
-        1. Let _argRef_ be the result of evaluating |AssignmentExpression|.
-        1. Let _specifier_ be ? GetValue(_argRef_).
-        1. Let _promiseCapability_ be ! NewPromiseCapability(%Promise%).
-        1. Let _specifierString_ be ToString(_specifier_).
-        1. IfAbruptRejectPromise(_specifierString_, _promiseCapability_).
-        1. Perform ! HostImportModuleDynamically(_referencingScriptOrModule_, _specifierString_, _promiseCapability_).
-        1. Return _promiseCapability_.[[Promise]].
-      </emu-alg>
-    </emu-clause>
-  </emu-clause>
-</emu-clause>
-
-<emu-clause id=sec-forbidden-extensions>
-  <h1>Forbidden Extensions</h1>
-
-  <p>An implementation must not extend this specification in the following ways:</p>
-
-  <ul>
-    <li>
-      ...
-    </li>
-    <li>
-      <ins>|ImportCall| must not be extended.</ins>
-      <!~~ This is so that in the future we can potentially add new arguments or support ArgumentList. ~~>
-    </li>
-  </ul>
-</emu-clause>
- -->
