Spec § Environment records: Added void GetTopicBindingStatus concrete methods

--- a/spec.html
+++ b/spec.html
@@ -267,9 +267,15 @@ Establish the topic binding (that is, the `#` binding) of an Environment Record 
 <emu-clause id="sec-object-environment-records">
 <h1>Object Environment Records</h1>
 
+<ins class=block>
+<emu-clause id="sec-object-environment-records-gettopicbindingstatus">
+<h1>GetTopicBindingStatus ( )</h1>
+<p>Regular object Environment Records have void topic bindings.</p>
 <emu-alg>
+1. Return *"void"*.
 </emu-alg>
 </emu-clause>
+</ins>
 
 </emu-clause>
 
@@ -277,9 +283,15 @@ Establish the topic binding (that is, the `#` binding) of an Environment Record 
 <emu-clause id="sec-global-environment-records">
 <h1>Global Environment Records</h1>
 
+<ins class=block>
+<emu-clause id="sec-global-environment-records-gettopicbindingstatus">
+<h1>GetTopicBindingStatus ( )</h1>
+<p>Global Environment Records have void topic bindings.</p>
 <emu-alg>
+1. Return *"void"*.
 </emu-alg>
 </emu-clause>
+</ins>
 </emu-clause>
 
 <!-- es6num="8.1.1.5" -->
