--- a/spec.html
+++ b/spec.html
@@ -254,7 +254,10 @@ Establish the topic binding (that is, the `#` binding) of an Environment Record 
 
 <emu-clause id="sec-declarative-environment-records-gettopicbindingvalue">
 <h1>GetTopicBindingValue ( )</h1>
-<p>The method GetTopicBindingValue for declarative Environment Records is guaranteed to be called only when their topic bindings have already been established.</p>
+<p>The method GetTopicBindingValue for declarative Environment Records returns the value of the record's topic binding. It must not be called when the record's topic binding has not already been established.</p>
+<emu-note>
+<p>That is, Environment Records will never be called on an Environment Record before the BindTopicValue method has been called.</p>
+</emu-note>
 <emu-alg>
 1. Let _envRec_ be the declarative Environment Record for which the method was invoked.
 2. Assert: _envRec_.[[TopicBindingStatus]] is *"bound"*.
