--- a/spec.html
+++ b/spec.html
@@ -471,7 +471,7 @@ With parameter _symbol_.
 <emu-clause id=sec-pipeline-operator-runtime-semantics-evaluation>
 <h1>Runtime Semantics: Evaluation</h1>
 
-<emu-grammar>PipelineExpression : PipelineExpression `|>` PipelineBody</emu-grammar>
+<emu-grammar>PipelineExpression : PipelineExpression `|&gt;` PipelineBody</emu-grammar>
 <emu-alg>
 1. [TODO]
 </emu-alg>
