Spec § Expressions: Created this wrapping around Primary Expression and Pipeline Operator

--- a/spec.html
+++ b/spec.html
@@ -352,6 +352,9 @@ Punctuator :: one of
 
 </emu-clause>
 
+<emu-clause id=sec-ecmascript-language-expressions>
+<h1>ECMAScript Language: Expressions</h1>
+
 <emu-clause id=sec-primary-expression>
 <h1>Primary Expression</h1>
 <h2>Syntax</h2>
@@ -499,6 +502,7 @@ With parameter _headValue_.
 
 </emu-clause>
 </ins>
+</emu-clause>
 
 <emu-clause id=sec-ecmascript-language-functions-and-classes>
 <h1>ECMAScript Language: Functions and Classes</h1>
