--- a/spec.html
+++ b/spec.html
@@ -11,7 +11,7 @@ contributors: J. S. Choi
 
 <emu-intro id=introduction>
 <h1>Introduction</h1>
-<p>This is the formal specification for a proposed "smart pipe operator" <code>|&gt;</code> in JavaScript. <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>See the proposal's explainer for an introduction</a>.</p>
+<p>This is the formal specification for a proposed "smart pipe operator" <code>|&gt;</code> in JavaScript. See <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>the proposal's explainer</a> for the proposal's background, motivation, usage examples, explanation, and information on planned add-on proposals.</p>
 </emu-intro>
 
 <emu-clause id="sec-lexical-environments">
