Spec: Improved section nesting to match ECMA262

--- a/spec.html
+++ b/spec.html
@@ -14,6 +14,9 @@ contributors: J. S. Choi
 <p>This is the formal specification for a proposed "smart pipe operator" <code>|&gt;</code> in JavaScript. See <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>the proposal's explainer</a> for the proposal's background, motivation, usage examples, explanation, and information on planned add-on proposals.</p>
 </emu-intro>
 
+<emu-clause id=executable-code-and-execution-contexts>
+<h1>Executable Code and Execution Contexts</h1>
+
 <emu-clause id="sec-lexical-environments">
 <h1>Lexical Environments</h1>
 
@@ -332,6 +335,12 @@ Establish the topic binding (that is, the `#` binding) of an Environment Record 
 </emu-clause>
 
 </emu-clause>
+</emu-clause>
+</emu-clause>
+</emu-clause>
+
+<emu-clause id=sec-ecmascript-language-lexical-grammar>
+<h1>ECMAScript Language: Lexical Grammar</h1>
 
 <emu-clause id=sec-punctuators>
 <h1>Punctuators</h1>
@@ -350,6 +359,7 @@ Punctuator :: one of
 </emu-grammar>
 </del>
 
+</emu-clause>
 </emu-clause>
 
 <emu-clause id=sec-ecmascript-language-expressions>
@@ -497,6 +507,8 @@ With parameter _headValue_.
 [TODO: More body evaluations]
 
 </emu-clause>
+</emu-clause>
+
 
 [TODO: Other static semantics]
 
