Spec: Added to-dos

--- a/spec.html
+++ b/spec.html
@@ -487,7 +487,8 @@ With parameter _headValue_.
 6. Return ? EvaluateCall(_func_, _ref_, _Arguments_, _tailCall_).
 </emu-alg>
 
-[TODO: More body evaluations]
+<p>[TODO: More body evaluations]</p>
+<p>[TODO: Other static semantics]</p>
 
 </emu-clause>
 </emu-clause>
